forgot to add my user story

--- a/docs/ProjectManagement/UserStories/VA266.md
+++ b/docs/ProjectManagement/UserStories/VA266.md
@@ -3,27 +3,28 @@
 
 ## Title
 
-*As a user, I want a user who is signed in to only be able to vote once, so that they cant spam the vote*
+*As a user, I want a QR code for my vote, so that I can quickly share with others*
 
 ## Description
 
-In this user story we want to have it so that when a user is not logged in they cannot vote more than once on a given device.
-This will make it so that a user cannot continusly vote on one poll and sway the vote in their favor.
+In this user story we want the app to create a QR code for each poll that gets created so that users
+can share them easily by having others scan the QR code. This will have the user scan the code and then take them to the
+submit a vote apge
 
 ### Details:
 
-1. When a user goes to cast a vote wether they are logged in or not they will have their ip logged in the case vote
-2. If a user goes to cast a vote again when they have already have one submitted they will be taken back to the access a vote page
+1. When a user creates a vote then on the confirmation page there will be a qr code for the user
+2. When the user scans the qr code it will take the user to the cast a vote page for that vote
 
 ## Acceptance Criteria
-    Given I am on the Cast a Vote Page
-    And I have not cast a vote yet
-    I will be able to cast a vote
+    Given I am on the vote confitmation page
+    Then I should see a QR code for the vote
 
-    Given I am on the Cast a Vote Page
-    And I have cast a vote 
-    I will not be able to cast a vote
+    Given I am on the poll review page
+    Then I should see a QR code for each vote
 
+    Given I scan the QR code for the vote
+    Then I should taken to the submit a vote page for that vote
 ## Assumptions/Preconditions
 N/A
 
@@ -36,15 +37,17 @@ Sam Torris
 
 
 ## Git Feature Branch
-f_VA266_One_vote_per_user
+f_add_qr_code_to_vote
 
 
 ## Modeling and Other Documents
 
 
 ## Tasks
-1. Add code to get the current ip of the client
-2. Add field to SubmittedVote table for IP
-3. Add code to fill this field on vote submittion
-4. Add code to check if the current client IP matches any of the SubmittedVotes in the system for that vote
-5. Add code to redirect user if they have already cast a vote
+1. Find qr code api
+2. learn how to send qr code request
+3. create method to send request with given data
+4. create code to change returned method into byte array
+5. add byte array item to db for the qr code
+6. add byte array into db when qr code is created
+7. create action method to change byte array into png for page
